Update tasks.json and child-component.component.html

--- a/src/app/child-component/child-component.component.html
+++ b/src/app/child-component/child-component.component.html
@@ -1,13 +1,10 @@
-<p>child-component works!</p>
+<p>child-component works!!!</p>
 <!--Local Reference below-->
 Enter some Data: <input type ="text" #text12/><br/>
 Entered Value is -- {{text12.value}}
-<!--@ViewChild()-->
 
-<!--ngModel ==== LocalReference + @ViewChild()-->
 <p>
   The divide is the third studio album by the world-renown English singer, {{musicianName1}}
-  
   <br/>
   Sum of {{number1}} and {{number2}} is {{sum}}
 </p>
@@ -91,3 +88,4 @@ Enter Movie year: <input type ="text" [(ngModel)] = "year"/><br/><br/>
 <hr/>
 
 <ng-content></ng-content>
+
